--- a/src/components/Node.css
+++ b/src/components/Node.css
@@ -14,16 +14,16 @@
 }
 
 .childGrid {
-    /* border: 3px solid rgb(255, 0, 179);
-    margin: 10px; */
+    border: 3px solid rgb(255, 0, 179);
+    margin: 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
 .nodeGrid {
-    /* border: 3px solid rgb(255, 251, 0);
-    margin: 10px; */
+    border: 3px solid rgb(255, 251, 0);
+    margin: 10px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
