--- a/src/components/Roadmap.css
+++ b/src/components/Roadmap.css
@@ -1,11 +1,11 @@
 .container {
-    border: 1px solid rgb(255, 0, 0);
+    /* border: 1px solid rgb(255, 0, 0); */
     flex: 1;
     padding: 24;
 }
 
 .layer {
-    border: 1px solid rgb(0, 4, 255);
+    /* border: 1px solid rgb(0, 4, 255); */
     flex: 1;
     padding: 24;
     display: flex;
