--- a/src/components/Node.css
+++ b/src/components/Node.css
@@ -1,29 +1,30 @@
 .mainNode {
-    border: 3px solid rgb(0, 255, 13);
+    /* border: 3px solid rgb(0, 255, 13); */
     display: inline-block;
-    margin: 20px;
-    margin-top: 60px;
-    text-align: center;
+    flex-direction: column;
+    justify-content: center;
+    margin: auto;
+    padding: 0px 50px 10px;
 }
 
 .childNode {
-    border: 3px solid rgb(60, 138, 64);
+    /* border: 3px solid rgb(60, 138, 64); */
     display: inline-block;
-    margin: 20px;
-    text-align: center;
+    flex-direction: column;
+    justify-content: center;
+    margin: auto;
+    padding: 0px 50px 10px;
 }
 
 .childGrid {
-    border: 3px solid rgb(255, 0, 179);
-    margin: 10px;
+    /* border: 3px solid rgb(255, 0, 179); */
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
 .nodeGrid {
-    border: 3px solid rgb(255, 251, 0);
-    margin: 10px;
+    /* border: 3px solid rgb(255, 251, 0); */
     display: flex;
     flex-direction: row;
     justify-content: space-between;
