--- a/src/components/Roadmap.css
+++ b/src/components/Roadmap.css
@@ -7,8 +7,7 @@
 .layer {
     /* border: 1px solid rgb(0, 4, 255); */
     flex: 1;
-    padding: 24;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
 }
