--- a/src/components/Node.css
+++ b/src/components/Node.css
@@ -13,7 +13,7 @@
     flex-direction: column;
     justify-content: center;
     margin: auto;
-    padding: 0px 50px 10px;
+    padding: 0px 50px 0px;
 }
 
 .childGrid {
@@ -28,4 +28,5 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    padding: 0;
 }
