--- a/src/components/Roadmap.css
+++ b/src/components/Roadmap.css
@@ -2,6 +2,9 @@
   /* border: 1px solid rgb(255, 0, 0); */
   flex: 1;
   padding: 50px;
+  display: flex;
+  flex-flow: column;
+  height: 90%;
 }
 
 .layer {
