--- a/src/components/Roadmap.css
+++ b/src/components/Roadmap.css
@@ -1,7 +1,7 @@
 .container {
   /* border: 1px solid rgb(255, 0, 0); */
   flex: 1;
-  padding: 50px;
+  padding: 150px 0px 150px;
   display: flex;
   flex-flow: column;
   height: 90%;
