--- a/src/components/Roadmap.css
+++ b/src/components/Roadmap.css
@@ -4,9 +4,10 @@
   justify-content: center;
   flex: 1;
   width: fit-content;
-  border: 1px solid rgb(255, 0, 0);
-  padding: 150px 0px 150px;
-  height: 90%;
+  min-width: 99%;
+
+  /* border: 1px solid rgb(255, 0, 0); */
+  padding: 100px 0px 100px;
 }
 
 .layer {
@@ -14,6 +15,6 @@
   flex-direction: row;
   justify-content: center;
   display: flex;
-  border: 1px solid rgb(0, 4, 255);
+  /* border: 1px solid rgb(0, 4, 255); */
   padding: 10px;
 }
