--- a/src/components/ContentView.css
+++ b/src/components/ContentView.css
@@ -4,10 +4,249 @@
 }
 
 .code {
-  font-family: 'Courier New';
+  font-family: "Courier New";
   font-size: 12px;
   line-height: 1.5;
   white-space: pre;
   word-wrap: normal;
 }
 
+/* body */
+.reactMarkDown {
+  margin: 20px 0px;
+  width: 45vw;
+  background-color: #fff;
+  color: #000;
+  font: 13px "Myriad Pro", "Lucida Grande", Lucida, Verdana, sans-serif;
+}
+
+/* links */
+.reactMarkDown a:link {
+  color: #00f;
+  text-decoration: none;
+}
+
+.reactMarkDown a:visited {
+  color: #00a;
+  text-decoration: none;
+}
+
+.reactMarkDown a:hover {
+  color: #f60;
+  text-decoration: underline;
+}
+
+.reactMarkDown a:active {
+  color: #f60;
+  text-decoration: underline;
+}
+
+/* html tags */
+
+/*  Work around IE/Win code size bug - courtesy Jesper, waffle.wootest.net  */
+
+.reactMarkDown * html code {
+  font-size: 101%;
+}
+
+.reactMarkDown * html pre {
+  font-size: 101%;
+}
+
+/* code */
+
+.reactMarkDown pre,
+code {
+  font-size: 11px;
+  font-family: monaco, courier, consolas, monospace;
+}
+
+.reactMarkDown pre {
+  margin-top: 5px;
+  margin-bottom: 10px;
+  border: 1px solid #c7cfd5;
+  background: #f1f5f9;
+  margin: 20px 0;
+  padding: 8px;
+  text-align: left;
+}
+
+.reactMarkDown hr {
+  color: #919699;
+  size: 1;
+  width: 100%;
+  noshade: "noshade";
+}
+
+/* headers */
+
+.reactMarkDown h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Myriad Pro", "Lucida Grande", Lucida, Verdana, sans-serif;
+  font-weight: bold;
+}
+
+.reactMarkDown h1 {
+  margin-top: 1em;
+  margin-bottom: 25px;
+  color: #000;
+  font-weight: bold;
+  font-size: 30px;
+}
+
+.reactMarkDown h2 {
+  margin-top: 2.5em;
+  font-size: 24px;
+  color: #000;
+  padding-bottom: 2px;
+  border-bottom: 1px solid #919699;
+}
+
+.reactMarkDown h3 {
+  margin-top: 2em;
+  margin-bottom: 0.5em;
+  font-size: 17px;
+  color: #000;
+}
+
+.reactMarkDown h4 {
+  margin-top: 2em;
+  margin-bottom: 0.5em;
+  font-size: 15px;
+  color: #000;
+}
+
+.reactMarkDown h5 {
+  margin-top: 20px;
+  margin-bottom: 0.5em;
+  padding: 0;
+  font-size: 13px;
+  color: #000;
+}
+
+.reactMarkDown h6 {
+  margin-top: 20px;
+  margin-bottom: 0.5em;
+  padding: 0;
+  font-size: 11px;
+  color: #000;
+}
+
+.reactMarkDown p {
+  margin-top: 0px;
+  margin-bottom: 10px;
+}
+
+/* lists */
+
+.reactMarkDown ul {
+  list-style: square outside;
+  margin: 0 0 0 30px;
+  padding: 0 0 12px 6px;
+}
+
+.reactMarkDown li {
+  margin-top: 7px;
+}
+
+.reactMarkDown ol {
+  list-style-type: decimal;
+  list-style-position: outside;
+  margin: 0 0 0 30px;
+  padding: 0 0 12px 6px;
+}
+
+.reactMarkDown ol ol {
+  list-style-type: lower-alpha;
+  list-style-position: outside;
+  margin: 7px 0 0 30px;
+  padding: 0 0 0 10px;
+}
+
+.reactMarkDown ul ul {
+  margin-left: 40px;
+  padding: 0 0 0 6px;
+}
+
+.reactMarkDown li > p {
+  display: inline;
+}
+.reactMarkDown li > p + p {
+  display: block;
+}
+.reactMarkDown li > a + p {
+  display: block;
+}
+
+/* table */
+
+.reactMarkDown table {
+  width: 100%;
+  border-top: 1px solid #919699;
+  border-left: 1px solid #919699;
+  border-spacing: 0;
+}
+
+.reactMarkDown table th {
+  padding: 4px 8px 4px 8px;
+  background: #e2e2e2;
+  font-size: 12px;
+  border-bottom: 1px solid #919699;
+  border-right: 1px solid #919699;
+}
+.reactMarkDown table th p {
+  font-weight: bold;
+  margin-bottom: 0px;
+}
+
+.reactMarkDown table td {
+  padding: 8px;
+  font-size: 12px;
+  vertical-align: top;
+  border-bottom: 1px solid #919699;
+  border-right: 1px solid #919699;
+}
+.reactMarkDown table td p {
+  margin-bottom: 0px;
+}
+.reactMarkDown table td p + p {
+  margin-top: 5px;
+}
+.reactMarkDown table td p + p + p {
+  margin-top: 5px;
+}
+
+/* forms */
+
+.reactMarkDown form {
+  margin: 0;
+}
+
+.reactMarkDown button {
+  margin: 3px 0 10px 0;
+}
+
+.reactMarkDown input {
+  vertical-align: middle;
+  padding: 0;
+  margin: 0 0 5px 0;
+}
+
+.reactMarkDown select {
+  vertical-align: middle;
+  padding: 0;
+  margin: 0 0 3px 0;
+}
+
+.reactMarkDown textarea {
+  margin: 0 0 10px 0;
+  width: 100%;
+}
+
+.reactMarkDown img {
+  max-width: 45vw;
+}
