--- a/src/components/ContentView.css
+++ b/src/components/ContentView.css
@@ -3,14 +3,6 @@
   font-family: Arial;
 }
 
-.code {
-  font-family: "Courier New";
-  font-size: 12px;
-  line-height: 1.5;
-  white-space: pre;
-  word-wrap: normal;
-}
-
 /* body */
 .reactMarkDown {
   margin: 20px 0px;
@@ -41,12 +33,8 @@
   text-decoration: underline;
 }
 
-/* html tags */
-
-/*  Work around IE/Win code size bug - courtesy Jesper, waffle.wootest.net  */
-
 .reactMarkDown * html code {
-  font-size: 101%;
+  font-size: 100%;
 }
 
 .reactMarkDown * html pre {
@@ -57,8 +45,10 @@
 
 .reactMarkDown pre,
 code {
-  font-size: 11px;
+  font-size: 14px;
   font-family: monaco, courier, consolas, monospace;
+  color: green;
+  font-style: italic;
 }
 
 .reactMarkDown pre {
@@ -92,45 +82,45 @@ h6 {
 
 .reactMarkDown h1 {
   margin-top: 1em;
-  margin-bottom: 25px;
+  margin-bottom: 1em;
   color: #000;
   font-weight: bold;
   font-size: 30px;
 }
 
 .reactMarkDown h2 {
-  margin-top: 2.5em;
+  margin-top: 1em;
+  margin-bottom: 1em;
   font-size: 24px;
   color: #000;
   padding-bottom: 2px;
-  border-bottom: 1px solid #919699;
 }
 
 .reactMarkDown h3 {
-  margin-top: 2em;
-  margin-bottom: 0.5em;
+  margin-top: 1em;
+  margin-bottom: 1em;
   font-size: 17px;
   color: #000;
 }
 
 .reactMarkDown h4 {
-  margin-top: 2em;
-  margin-bottom: 0.5em;
+  margin-top: 1em;
+  margin-bottom: 1em;
   font-size: 15px;
   color: #000;
 }
 
 .reactMarkDown h5 {
-  margin-top: 20px;
-  margin-bottom: 0.5em;
+  margin-top: 1em;
+  margin-bottom: 1em;
   padding: 0;
   font-size: 13px;
   color: #000;
 }
 
 .reactMarkDown h6 {
-  margin-top: 20px;
-  margin-bottom: 0.5em;
+  margin-top: 1em;
+  margin-bottom: 1em;
   padding: 0;
   font-size: 11px;
   color: #000;
